--- a/site/style.css
+++ b/site/style.css
@@ -35,8 +35,8 @@ body{
 
 /*Overview*/
 #overview{
-    width: 90%;
-    height: 90%;
+    width: 652px;
+    height: 652px;
     margin: 0 auto;
 }
 
